sidenav/svy-sidenav.css
/* Drilldown to second menu items */
.svy-sidenav {
	width: 100%;
	height: 100%;
	border-right: 1px solid #e6e6e6;
}

.svy-sidenav :focus {
	outline: none;
}

/* All Sub Menu */
[class^="svy-sidenav-menu"] {
	display: none;
	color : #444;
}

[class^="svy-sidenav-menu"].svy-sidenav-collapsed {
	display: block;
}

.svy-navitem-selected {
	color: green;
}

.svy-navitem-disabled {
	background: #eee;
	color: #777;
}

.svy-sidenav li {
	list-style-type: none;
}

/* Main Nav collection*/
.svy-sidenav-menu {
	font-size: 18px;
	line-height: 18px;
	padding-left: 0px;
}

.svy-sidenav-menu2 {
	font-size: 16px;
	line-height: 16px;
}

/* Style */
.svy-sidenav-item {
	display: block;
	color: inherit;
	padding: 10px 15px;
	cursor: pointer;
}

.svy-sidenav-item:focus,
.svy-sidenav-item:hover {
	text-decoration: none;
	color: inherit;
}

.svy-sidenav-main a {
	color: #777;
}

.svy-navitem-disabled .svy-sidenav-item {
	cursor: default;
}

/* .svy-sidenav-main a:hover, a:focus {
    color: inherit;
    text-decoration: inherit;
    cursor: pointer;
} */

/* Color border of list */
.svy-sidenav-main {
	border-color: #e6e6e6;
}

.svy-searchbox {
	display: none;
}

/* Active main list item */
.svy-sidenav-menu > .svy-navitem-selected {
	border-left: 3px solid #41b495;
}

.svy-sidenav-divider {
	width: 100%;
	border-top: 1px solid #000;
}

.svy-sidenav-collapse-icon {
	padding: 10px;
	margin-right: -10px;
	margin-top: -10px;
}

/* Animate the menu */
[class^="svy-sidenav-menu"].ng-enter, 
[class^="svy-sidenav-menu"].ng-leave {
  	transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.35s;
}

[class^="svy-sidenav-menu"].ng-enter,
[class^="svy-sidenav-menu"].ng-leave.ng-leave-active {
  	max-height: 0px;
  	overflow: hidden;
}

[class^="svy-sidenav-menu"].ng-leave,
[class^="svy-sidenav-menu"].ng-enter.ng-enter-active {
 	max-height: 200px;
 	overflow: hidden;
}

